tiny-pete/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petey
spec:
  type: NodePort
  selector:
    app: tiny-pete
  ports:
  - name: http
    port: 8080
    targetPort: 80
