tiny-pete/deploy/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pete-on-the-web
spec:
  rules:
  - http:
      paths:
      - path: /pete
        backend:
          serviceName: petey
          servicePort: 8080
